try fix animation collapse

--- a/src/sass/components/collapse.scss
+++ b/src/sass/components/collapse.scss
@@ -47,7 +47,7 @@
     }
 
     &.isOpen {
-      height: 150px;
+      height:auto;
     }
   }
 }
